--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "testTelegramLambdaBot",
+  "name": "serverlessTelegramMemeBot",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "local": "sls offline start",
-    "deploy": "sls deploy",
-    "logs": "sls logs --function processWebhook -t"
+    "deploy": "sls deploy"
   },
   "keywords": [],
   "author": "",
